--- a/FinalProyect/index.html
+++ b/FinalProyect/index.html
@@ -7,15 +7,47 @@
     <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Página de Calculadoras</h1>
-    <h2 id="pageTitle">Seleccione una opción</h2>
-    <button  onclick="updateTitle('Calculadora Básica')">Calculadora Básica</button>
-    <button  onclick="updateTitle('Calculadora de conversión de Unidades')">Calculadora de conversión de Unidades</button>
-    <button  onclick="updateTitle('Conversión de peso')">Conversión de peso</button>
-    <button  onclick="updateTitle('Conversión de temperatura')">Conversión de temperatura</button>
-    <button  onclick="updateTitle('Conversión de decimal a binario')">Conversión de decimal a binario</button>
-    <button  onclick="updateTitle('Conversión de decimal a sexagesimal')">Conversión de decimal a sexagesimal</button>
-    <button id="returnMenu" onclick="returnMenu('Regresar al inicio')">Regresar al inicio</button>
+    <div>
+        <h1><strong>Página de Calculadoras</strong></h1>
+        <h2 id="pageTitle">Seleccione una opción</h2>
+        <button id="button1"  onclick="basicCalculator()">Calculadora Básica</button>
+        <button id="button2" onclick="updateTitle('Calculadora de conversión de Unidades')">Calculadora de conversión de Unidades</button>
+        <button id="button3" onclick="updateTitle('Conversión de masa')">Conversión de masa</button>
+        <button id="button4" onclick="updateTitle('Conversión de temperatura')">Conversión de temperatura</button>
+        <button id="button5" onclick="updateTitle('Conversión de decimal a binario')">Conversión de decimal a binario</button>
+        <button id="button6" onclick="updateTitle('Conversión de decimal a sexagesimal')">Conversión de decimal a sexagesimal</button>
+        <button id="buttonMenu" onclick="returnMenu()">Regresar al inicio</button>
+        <form name="calculator">
+            <main>
+                <div id= "calculator">
+                    <form name="calculator">
+                        <input class="textfield" type="textfield" name="ans" value="" autocomplete="off" readonly>
+                        <input type="button" value="7" onclick="document.calculator.ans.value+='7'" class="grey">
+                        <input type="button" value="8" onclick="document.calculator.ans.value+='8'" class="grey">
+                        <input type="button" value="9" onclick="document.calculator.ans.value+='9'" class="grey">
+                        <input id="errase" type="button" value="←" onclick="document.calculator.ans.value = document.calculator.ans.value.slice(0,-1) " class="orange">
+                        <input type="reset" value="C" class="orange">
+                        <br>
+                        <input type="button" value="4" onclick="document.calculator.ans.value+='4'" class="grey">
+                        <input type="button" value="5" onclick="document.calculator.ans.value+='5'" class="grey">
+                        <input type="button" value="6" onclick="document.calculator.ans.value+='6'" class="grey">
+                        <input type="button" value="X" onclick="document.calculator.ans.value+='*'" class="orange">
+                        <input type="button" value="/" onclick="document.calculator.ans.value+='/'" class="orange"> 
+                        <br>
+                        <input type="button" value="1" onclick="document.calculator.ans.value+='1'" class="grey">
+                        <input type="button" value="2" onclick="document.calculator.ans.value+='2'" class="grey">
+                        <input type="button" value="3" onclick="document.calculator.ans.value+='3'" class="grey">
+                        <input type="button" value="+" onclick="document.calculator.ans.value+='+'" class="orange">
+                        <input type="button" value="-" onclick="document.calculator.ans.value+='-'" class="orange">
+                        <br>
+                        <input type="button" value="0" onclick="document.calculator.ans.value+='0'" class="grey">
+                        <input type="button" value="." onclick="document.calculator.ans.value+='.'" class="grey">
+                        <input type="button" value="=" onclick="document.calculator.ans.value = eval(document.calculator.ans.value)" class="buttonEqual">
+                    </form>
+                </div>
+            </main>
+        </form>
+    </div>
     <script src="./calculator.js"></script>
 </body>
 </html>     
