--- a/FinalProyect/Proyecto Final KL/pages/weight-conversion.html
+++ b/FinalProyect/Proyecto Final KL/pages/weight-conversion.html
@@ -39,6 +39,6 @@
 
     <a href="./../index.html" class="volver">Volver</a>
 
-    <script src="convert.js"></script>
+    <script src="../js/weight-conversion.js"></script>
 </body>
 </html>
