--- a/FinalProyect/Proyecto Final KL/index.html
+++ b/FinalProyect/Proyecto Final KL/index.html
@@ -18,11 +18,11 @@
         <hr>
         <a href="pages/weight-conversion.html"class="Calculator"><span class="title">Calculadora de Peso-masa</span></a>
         <hr>
-        <a href="pages/basic-calculator.html" class="Calculator"><span class="title">Conversión  de temperatura</span></a>
+        <a href="pages/temperature-conversor.html" class="Calculator"><span class="title">Conversión  de temperatura</span></a>
         <hr>
         <a href="pages/decimal-to-binary.html"class="Calculator"><span class="title">Conversión de decimal a binario</span></a>
         <hr>
-        <a href="pages/weight-conversion.html"class="Calculator"><span class="title">Conversion de decimal a sexagesimal</span></a>
+        <a href="pages/decimal-to-sexagesimal.html"class="Calculator"><span class="title">Conversion de decimal a sexagesimal</span></a>
         <hr>
     </div>
 </body>
