--- a/FinalProyect/Proyecto Final KL/pages/weight-conversion.html
+++ b/FinalProyect/Proyecto Final KL/pages/weight-conversion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convertidor de Peso</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/weight-conversion.css">
 </head>
 <body>
     <form name="weight-conversion">
