--- a/FinalProyect/Proyecto Final KL/pages/unit-converter/unit-converter.html
+++ b/FinalProyect/Proyecto Final KL/pages/unit-converter/unit-converter.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convertidor de Unidades</title>
-    <link rel="stylesheet" href="../css/unit-converter.css">
+    <link rel="stylesheet" href="/Proyecto Final KL/pages/unit-converter/unit-converter.css">
 </head>
 <body>
-    <a href="./../index.html" class="volver">Volver</a>
+    <a href="/Proyecto Final KL/index.html" class="volver">Volver</a>
 
     <form name="unit-converter">
         <label for="number_to_convert">Número a convertir</label>
@@ -37,6 +37,6 @@
 
     <p id="result"></p>
 
-    <script src="../js/unit-converter.js"></script>
+    <script src="/Proyecto Final KL/pages/unit-converter/unit-converter.js"></script>
 </body>
 </html>
