--- a/FinalProyect/Proyecto Final KL/pages/decimal-to-binary/decimal-to-binary.html
+++ b/FinalProyect/Proyecto Final KL/pages/decimal-to-binary/decimal-to-binary.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Decimal to Binary Converter</title>
-    <link href="./../css/decimal-to-binary.css" rel="stylesheet"/>
+    <link href="/Proyecto Final KL/pages/decimal-to-binary/decimal-to-binary.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Decimal to Binary Converter</h1>
+    <h1>Conversion de Decimal a Binario</h1>
     <div class="input-container">
-      <label for="number-input">Enter a decimal number:</label>
+      <label for="number-input">Ingresa un número decimal:</label>
       <input
         value=""
         type="number"
         name="decimal number input"
         id="number-input"
         class="number-input"
-      />
-      <button class="convert-btn" id="convert-btn">Convert</button>
+        />
+      <button class="convert-btn" id="convert-btn">Convertir</button>
     </div>
     <output id="result" for="number-input"></output>
-    <div id="animation-container"></div>
-    <script src="../js/decimal-to-binary.js"></script>
+    
+    <script src="/Proyecto Final KL/pages/decimal-to-binary/decimal-to-binary.js"></script>
   </body>
-  <a href="./../index.html" class="volver">Volver</a>
+  <a href="/Proyecto Final KL/index.html" class="volver">Volver</a>
 </html>
