--- a/FinalProyect/Proyecto Final KL/pages/weight-conversion/weight-conversion.html
+++ b/FinalProyect/Proyecto Final KL/pages/weight-conversion/weight-conversion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convertidor de Peso</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Proyecto Final KL/pages/weight-conversion/weight-conversion.css">
 </head>
 <body>
     <form name="weight-conversion">
@@ -15,7 +15,7 @@
             <option value="Ton">Tonelada</option>
             <option value="Kg">Kilogramo</option>
             <option value="Lb">Libra</option>
-            <option value="G">Gramo</option>
+            <option value="g">Gramo</option>
             <option value="Onz">Onza</option>
         </select>
 
@@ -26,7 +26,7 @@
             <option value="Ton">Tonelada</option>
             <option value="Kg">Kilogramo</option>
             <option value="Lb">Libra</option>
-            <option value="G">Gramo</option>
+            <option value="g">Gramo</option>
             <option value="Onz">Onza</option>
         </select>
 
@@ -37,8 +37,8 @@
 
     <p id="result"></p>
 
-    <a href="./../index.html" class="volver">Volver</a>
+    <a href="/Proyecto Final KL/index.html" class="volver">Volver</a>
 
-    <script src="../js/weight-conversion.js"></script>
+    <script src="/Proyecto Final KL/pages/weight-conversion/weight-conversion.js"></script>
 </body>
 </html>
